<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.Auth.LoginFragment">
    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/logoImg"
            android:gravity="center"
            android:textSize="70sp"
            android:text="@string/hmmIcon"
            app:layout_constraintTop_toBottomOf="@id/appname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginTextFieldLayout"
        app:boxStrokeWidth="2dp"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:errorEnabled="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextFieldLayout"
        app:boxStrokeWidth="2dp"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:errorEnabled="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTextFieldLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/keepLoggedInCheckBox"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/keepLoggedIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextFieldLayout" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:id="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/keepLoggedInCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/registerButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/createAccount"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/light_green"

        />
</androidx.constraintlayout.widget.ConstraintLayout>