<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.Community.CommunityWelcomeFragment"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/welcomePageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WITAM ;D"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/welcomePageTitle"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/channelsCardView"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channels"
                    android:textStyle="bold"
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    />
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:text="@string/voice"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/voiceChannelNumber"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    />
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:text="@string/text"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/textChannelNumber"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/usersCardView"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_width="175dp"
            android:layout_height="150dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/users"
                    android:textStyle="bold"
                    style="@style/TextAppearance.Material3.LabelLarge"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    />
                <TextView
                    android:id="@+id/usersNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roles"
                    android:textStyle="bold"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/rolesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>