<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.Settings.ChannelsSettingsFragment">

    <TextView
        android:id="@+id/voiceChannelsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/voiceChannels"
        style="@style/TextAppearance.Material3.LabelMedium"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addVoiceChannelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        app:icon="@drawable/outline_mic_24"
        style="@style/Widget.AppCompat.Button.Small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addVoiceChannelButton"
        />
    <ScrollView
        android:id="@+id/voiceChannelsRecycler"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/divider">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/channelsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_list_channel"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <TextView
        android:id="@+id/textChannelsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:textSize="17sp"
        android:text="@string/textChannels"
        app:layout_constraintTop_toBottomOf="@id/voiceChannelsRecycler"
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTextChannelButton"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/baseline_chat_bubble_outline_24"
        app:layout_constraintTop_toBottomOf="@id/voiceChannelsRecycler"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add"
        android:layout_marginEnd="15dp"
        style="@style/Widget.AppCompat.Button.Small"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/addTextChannelButton"
        />
    <ScrollView
        android:id="@+id/textChannelsRecycler"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_list_channel"
            >

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>